# Test_Agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.codex/: config.example.toml
config/: default.example.yaml  safety_limits.example.yaml
data/: README.md
docs/: architecture.md  contributing.md  manual-extraction.md  roadmap.md
references/: README.md
references/debug/: README.md
references/devices/: README.md  fefet.example.yaml  mosfet.example.yaml
references/hspice/: README.md
scripts/: README.md  extract_manuals.py
tests/: mock_b1500.py  test_skeleton.py
tmp/: a_flow_arbitration.md  a_flow_candidates_gpt.md  a_flow_candidates_opus.md  a_flow_design_gpt55.md  a_flow_design_opus48.md  ab_flow_arbitration.md  ab_flow_candidates_gpt.md  ab_flow_candidates_opus.md  ab_flow_design_arbitration.md  ab_flow_design_gpt55.md  ab_flow_design_opus46.md  atom_taxonomy_opus.md  atom_taxonomy_proposal_gpt55.md  atom_taxonomy_proposal_opus46.md  atom_taxonomy_proposal_opus48.md  b_flow_arbitration.md  b_flow_candidates_gpt.md  b_flow_candidates_opus.md  b_flow_design_arbitration.md  b_flow_design_gpt55.md  b_flow_design_opus46.md  c_atom_arbitration.md  c_atom_candidates_gpt55.md  c_atom_candidates_opus46.md  c_atom_cross_review_gpt_on_opus.md  c_atom_cross_review_opus_on_gpt.md  flow_taxonomy_proposal_gpt55.md  flow_taxonomy_proposal_opus48.md  spgu_selector_ab_gap_gpt55.md  spgu_selector_ab_gap_opus46.md  unit_atom_audit_hvspgu_opus46.md  unit_atom_audit_mfcmu_opus46.md  unit_atom_audit_smu_opus46.md  unit_atom_audit_wgfmu_opus46.md
(+106 files in other folders)
